--- a/src/Miki/resources/locales/eng.json
+++ b/src/Miki/resources/locales/eng.json
@@ -687,5 +687,6 @@
   "daily_streak_title": "Streak!",
   "daily_title": ":moneybag: Daily",
   "error_data_not_found": "We tried looking what you wanted, but nothing was found.",
-  "error_role_not_setup": "This role was not set up using Miki! use {0} to get started!" 
+  "error_role_not_setup": "This role was not set up using Miki! use {0} to get started!",
+  "error_server_internal":  "An error occured on a downstream service. {0} responded with {1}"
 }
