--- a/src/Miki/resources/locales/eng.json
+++ b/src/Miki/resources/locales/eng.json
@@ -692,5 +692,6 @@
   "daily_stats_time": "Next Claim Time",
   "error_data_not_found": "We tried looking what you wanted, but nothing was found.",
   "error_role_not_setup": "This role was not set up using Miki! use {0} to get started!",
-  "error_server_internal": "An error occured on a downstream service. {0} responded with {1}"
+  "error_server_internal": "An error occured on a downstream service. {0} responded with {1}",
+  "verb_weapon": "weapon"
 }
