--- a/src/Miki/resources/locales/eng.json
+++ b/src/Miki/resources/locales/eng.json
@@ -679,8 +679,9 @@
   "error_daily_claimed": "You already claimed your daily today! Please wait another {0} before using it again.",
   "error_action_unauthorized": "You cannot {0} this!",
   "error_pasta_null": "Pasta was not found.",
-  "appreciate_list": "Vote for us every day on [DiscordBots](https://discordbots.org/bot/160105994217586689/vote) to get an additional bonus!;Donate to us on [Patreon](https://patreon.com/mikibot) for more mekos!",
   "appreciate_title": "Appreciate Miki?",
+  "appreciate_list_1": "Vote for us every day on [DiscordBots](https://discordbots.org/bot/160105994217586689/vote) to get an additional bonus!",
+  "appreciate_list_2": "Donate to us on [Patreon](https://patreon.com/mikibot) for more mekos!",
   "daily_claimed": "You already claimed your daily today! Please wait another {0} before using it again.",
   "daily_received": "Received {0} Mekos! You now have {1} Mekos",
   "daily_streak": "You're on a {0} day daily streak!",
