Add feature flagging, scheduler backend

--- a/src/Miki/resources/locales/eng.json
+++ b/src/Miki/resources/locales/eng.json
@@ -695,5 +695,11 @@
   "error_data_not_found": "We tried looking what you wanted, but nothing was found.",
   "error_role_not_setup": "This role was not set up using Miki! use {0} to get started!",
   "error_server_internal": "An error occured on a downstream service. {0} responded with {1}",
-  "entity_weapon": "weapon"
+  "entity_weapon": "weapon",
+  "entity_word": "word",
+  "entity_number": "number",
+  "entity_switch": "toggle",
+  "entity_object": "object",
+  "error_missing_argument": "We missed an argument from you! Could you add a valid {0}?",
+  "error_command_disabled": "This command is disabled for now.. Sorry!" 
 }
