--- a/src/Miki/resources/locales/eng.json
+++ b/src/Miki/resources/locales/eng.json
@@ -700,6 +700,8 @@
   "entity_number": "number",
   "entity_switch": "toggle",
   "entity_object": "object",
+  "entity_reminder": "reminder",
   "error_missing_argument": "We missed an argument from you! Could you add a valid {0}?",
-  "error_command_disabled": "This command is disabled for now.. Sorry!" 
+  "error_entity_null": "This {0} was not found!",
+  "error_command_disabled": "This command is disabled for now.. Sorry!"
 }
