--- a/src/Miki/resources/locales/eng.json
+++ b/src/Miki/resources/locales/eng.json
@@ -703,5 +703,6 @@
   "entity_reminder": "reminder",
   "error_missing_argument": "We missed an argument from you! Could you add a valid {0}?",
   "error_entity_null": "This {0} was not found!",
-  "error_command_disabled": "This command is disabled for now.. Sorry!"
+  "error_command_disabled": "This command is disabled for now.. Sorry!",
+  "reminder_placed": "I'll remind you to {0} in {1}!"
 }
