--- a/src/Miki/resources/locales/por.json
+++ b/src/Miki/resources/locales/por.json
@@ -17,7 +17,7 @@
   "miki_module_fun_8ball_answer_neutral_3": "Melhor não te dizer agora.",
   "miki_module_fun_8ball_answer_neutral_4": "Não é possível prever agora.",
   "miki_module_fun_8ball_answer_neutral_5": "Concentre-se e pergunte novamente.",
-  "miki_module_fun_8ball_answer_positive_1": "É certo",
+  "miki_module_fun_8ball_answer_positive_1": "É certo.",
   "miki_module_fun_8ball_answer_positive_2": "É decididamente assim.",
   "miki_module_fun_8ball_answer_positive_3": "Sem dúvida.",
   "miki_module_fun_8ball_answer_positive_4": "Sim,definitivamente.",
