Update por.json (POEditor.com)

--- a/src/Miki/resources/locales/por.json
+++ b/src/Miki/resources/locales/por.json
@@ -110,7 +110,7 @@
     "miki_command_description_8ball": "Tente a sua sorte perguntando a Miki coisas específicas sobre sua vida!",
     "miki_command_description_pasta": "Salvar e carregar em determinadas linhas de texto.",
     "miki_command_usage_8ball": "> 8ball <question>",
-    "miki_command_usage_pasta": "pasta new <palavra-chave> <conteúdo de pasta>\npasta + <palavra-chave> <conteúdo de pasta>\npasta find <palavra-chave>\npasta search <palavra-chave>\npasta edit <palavra-chave> <conteúdo para editar>\npasta change <palavra-chave> <conteúdo para editar>\npasta who <palavra-chave>\npasta whom <palavra-chave>\npasta ? <palavra-chave>\npasta upvote <palavra-chave>\npasta <3 <palavra-chave>\npasta love <palavra-chave>\npasta downvote <palavra-chave>\npasta </3 <palavra-chave>pasta hate <palavra-chave>",
+    "miki_command_usage_pasta": ">pasta <palavra-chave>",
     "miki_module_fun_8ball_result": "🎱 {0}, a sua pergunta foi respondida `{1}`",
     "miki_module_fun_image_error_no_image_found": "Nenhuma imagem encontrada em sua pesquisa. -benzóico.",
     "miki_module_pasta_create_error_already_exist": "Esta pasta já existe! Tente outra diferente!",
@@ -139,8 +139,8 @@
     "miki_success_message_generic": "Sucesso!",
     "miki_command_description_info": "Mostre a informação sobre o bot e o seu criador.",
     "miki_command_description_prefix": "Defina o prefixo do seu servidor para a miki (padrão: >) para outra coisa",
-    "miki_command_usage_info": ">informações",
-    "miki_command_usage_prefix": "Prefixo",
+    "miki_command_usage_info": ">info",
+    "miki_command_usage_prefix": ">prefix",
     "miki_module_admin_disable_command": "Comando desativado `{0}`!",
     "miki_module_admin_disable_module": "Módulo desativado `{0}`!",
     "miki_module_admin_enable_command": "Comando ativado `{0}`!",
@@ -159,7 +159,7 @@
     "miki_module_general_guildinfo_roles": "📜 Cargos",
     "miki_module_general_guildinfo_users": "🙎 Usuários",
     "miki_module_general_help_description": "Descrição",
-    "miki_module_general_help_dm": "Uma mensagem pessoal com todos os meus comandos estão a caminho, use `> help [command]` para obter mais informações sobre este comando!",
+    "miki_module_general_help_dm": "Uma mensagem pessoal com todos os meus comandos estão a caminho, use `>help [command]` para obter mais informações sobre este comando!",
     "miki_module_general_help_usage": "Uso",
     "miki_module_general_info_docs": "Documentação",
     "miki_module_general_info_donate_string": "Olá a todos! Eu Criei um Patreon para apoiar a Miki. Por favor verifique e suporte-nos se você puder!",
@@ -185,22 +185,22 @@
     "miki_module_help_error_null_message": "Isto não é um comando. Para usar `{0} help [command]`, preencha um comando existente!",
     "miki_module_whois_header": "Quem é {0} !?",
     "miki_module_whois_tag_personal": "🙎 Pessoal",
-    "miki_accounts_level_up_content": "miki _contas_nível _Subiu_conteúdo",
-    "miki_accounts_level_up_header": "miki_contas_nível_Subiu_cabeçalho",
-    "miki_command_description_leaderboards": "miki_comando_descrição_top",
-    "miki_command_description_profile": "miki_comando_descrição_perfil",
-    "miki_command_description_toggledm": "miki_comando_descrição_alternânciadm",
-    "miki_command_description_toggleerrors": "miki_comando_descrição_alternânciaerros",
-    "miki_command_description_toggleguildnotifications": "miki_comando_descrição_alternânciaguildanotificações",
+    "miki_accounts_level_up_content": "**{0}** Subiu para o nível **{1}**!",
+    "miki_accounts_level_up_header": "☀️️ Você subiu de nível!",
+    "miki_command_description_leaderboards": "Confira as elites da Miki!",
+    "miki_command_description_profile": "Verifique o seu progresso para se tornar num mestre Miki!",
+    "miki_command_description_toggledm": "Alterne a Miki para lhe enviar DMs!",
+    "miki_command_description_toggleerrors": "Alterne a Miki para lhe enviar DMs de erro!",
+    "miki_command_description_toggleguildnotifications": "Alterne a Miki para lhe enviar mensagens sem comandos neste canal!",
     "miki_command_usage_leaderboards": "miki_comando_usos_top",
-    "miki_command_usage_profile": "miki_comando_usos_perfil",
-    "miki_command_usage_toggledm": "miki_comando_usos_alternânciapm",
-    "miki_command_usage_toggleerrors": "miki_comando_usos_alternânciaerros",
-    "miki_generic_achievements": "miki_genérico_conquistas",
-    "miki_generic_disabled": "miki_genérico_desabilitado",
-    "miki_generic_enabled": "miki_genérico_habilitado",
-    "miki_generic_global_information": "miki_genérico_global_Informação",
-    "miki_generic_information": "Informação ",
+    "miki_command_usage_profile": ">profile",
+    "miki_command_usage_toggledm": ">toggledm",
+    "miki_command_usage_toggleerrors": ">toggleerrors",
+    "miki_generic_achievements": "Conquistas",
+    "miki_generic_disabled": "desabilitado",
+    "miki_generic_enabled": "habilitado",
+    "miki_generic_global_information": "Informação Global",
+    "miki_generic_information": "Informação",
     "miki_generic_mekos": "Mekos",
     "miki_generic_reward": "Recompensa",
     "miki_module_accounts_information_level": "Level: {0} ({1} / {2})",
@@ -237,7 +237,7 @@
     "miki_module_accounts_marry_error_no_mention": "Por favor, mencione a pessoa a que você está propondo!",
     "miki_module_accounts_marry_error_null": "Você ou a outra pessoa ainda não possui uma conta miki. Faça com que eles falem mais!",
     "miki_module_accounts_marry_text": "0} propôs a {1}!",
-    "miki_module_accounts_marry_text2": "O casamento é um compromisso voluntário e pleno. É feito no sentido mais profundo, com exclusão de todos os outros. Antes de declarar seus votos um ao outro, quero ouvi-lo/a confirmar que é a sua intenção de se casar hoje. {0}, você esta aqui livremente para se entregar a {1} em casamento?",
+    "miki_module_accounts_marry_text2": "O casamento é um compromisso voluntário e pleno. É feito no sentido mais profundo, com exclusão de todos os outros. Antes de declarar os seus votos um ao outro, quero ouvi-lo/a confirmar que é a sua intenção de se casar hoje. {0}, você esta aqui para se entregar a {1} em casamento?",
     "miki_terms_mention": "menção",
     "miki_command_declinemarriage_description": "Somente quando você realmente não se quer casar.",
     "miki_command_declinemarriage_usage": ">declinemarriage @usuário\n>declinemarriage *",
@@ -659,7 +659,6 @@
     "permission_missing": "Eu não tenho permissão para {0}. Por favor me dê permissões!",
     "error_invalid_character": "Você não pode usar '{0}' neste contexto!",
     "error_miscript_parse": "Ocorreu uma exceção de análise desconhecida com a mensagem: \"{0}\"",
-    "String1": "String1",
     "ok_command_deleted": "O comando '{0}' foi excluído com sucesso!",
     "miki_command_description_createcommand": "Crie comandos com a linguagem de script da miki!",
     "miki_command_description_removecommand": "Remova seus comandos com script.",
