Update por.json (POEditor.com)

--- a/src/Miki/resources/locales/por.json
+++ b/src/Miki/resources/locales/por.json
@@ -236,8 +236,8 @@
     "miki_module_accounts_marry_error_exists": "Você já está propondo / casado com essa pessoa.",
     "miki_module_accounts_marry_error_no_mention": "Por favor, mencione a pessoa a que você está propondo!",
     "miki_module_accounts_marry_error_null": "Você ou a outra pessoa ainda não possui uma conta miki. Faça com que eles falem mais!",
-    "miki_module_accounts_marry_text": "0} propôs a {1}!",
-    "miki_module_accounts_marry_text2": "O casamento é um compromisso voluntário e pleno. É feito no sentido mais profundo, com exclusão de todos os outros. Antes de declarar os seus votos um ao outro, quero ouvi-lo/a confirmar que é a sua intenção de se casar hoje. {0}, você esta aqui para se entregar a {1} em casamento?",
+    "miki_module_accounts_marry_text": "{0} propôs a {1}!",
+    "miki_module_accounts_marry_text2": "O casamento é um compromisso voluntário e pleno. É feito no sentido mais profundo, com exclusão de todos os outros. Antes de declarar os seus votos um ao outro, quero ouvi-lo/a confirmar que é a sua intenção de se casar hoje. {0}, você aceita {1} em casamento?",
     "miki_terms_mention": "menção",
     "miki_command_declinemarriage_description": "Somente quando você realmente não se quer casar.",
     "miki_command_declinemarriage_usage": ">declinemarriage @usuário\n>declinemarriage *",
