Update por.json (POEditor.com)

--- a/src/Miki/resources/locales/por.json
+++ b/src/Miki/resources/locales/por.json
@@ -715,10 +715,10 @@
     "entity_user": "usuário",
     "error_reputation_none": "Nenhum usuário válido encontrado para dar reputação",
     "error_entity_invalid": "Este não é um {0} válido.",
-    "lottery_description": "Faça a maior aposta e seja recompensado massivamente se você vencer.",
+    "lottery_description": "Faça uma aposta e seja recompensado massivamente se você vencer.",
     "lottery": "Loteria",
     "lottery_tickets_owned": "Bilhetes que possuo",
-    "lottery_draw_time": "Sorteio de Loteria",
+    "lottery_draw_time": "Sorteio de loteria em:",
     "lottery_ticket_price": "Preço de bilhete",
     "lottery_jackpot": "Jackpot",
     "lottery_how_to": "Como comprar?",
