Guild Weekly Update
- Updated GuildService and guild weekly UX.

--- a/src/Miki/resources/locales/eng.json
+++ b/src/Miki/resources/locales/eng.json
@@ -365,8 +365,6 @@
   "miki_command_usage_poppasta": ">poppasta",
   "miki_command_usage_searchpasta": ">searchpasta <tag> [page=1]",
   "miki_command_usage_toppasta": ">toppasta",
-  "miki_guildweekly_insufficient_exp": "You do not have the experience needed to claim rewards on this guild. Please hang around for a bit until you are allowed to! \n\nYou need at least **{0}** experience before you can use this command in this guild.",
-  "miki_terms_weekly": "Weekly",
   "createpasta_error_no_content": "I couldn't find any content for this pasta. Please specify what you want to make.",
   "infopasta_error_no_arg": "Please state which pasta you'd like to identify.",
   "infopasta_rating": "Rating",
@@ -401,14 +399,26 @@
   "guildnewrival_error_timer_running": "Please wait a day before doing this command again!",
   "guildnewrival_success": "Your new rival is **{0}**!",
   "guildtop_title": "Top Guilds",
+  "guildweekly_title": "Guild Weekly",
+  "guildweekly_success_title": "Success!",
+  "guildweekly_success_content": "You have successfully claimed **{0}** Mekos from {1}. Check back in a week for more!",
+  "guildweekly_guildinsufficientexp_title": "Your rival has bested you!",
+  "guildweekly_guildinsufficientexp_content": "{0} needs more experience than its rival to unlock guild weekly claiming.",
+  "guildweekly_guildinsufficientexp_footer": "The guild will gain experience passively from people chatting in channels.",
+  "guildweekly_userinsufficientexp_title": "You don't have enough experience!",
+  "guildweekly_userinsufficientexp_content": "You need to get another **{0}** local experience before you can claim your guild weekly in {1}.",
+  "guildweekly_userinsufficientexp_footer": "You can get more experience by speaking in this guild.",
+  "guildweekly_notready_title": "Not Ready!",
+  "guildweekly_notready_content": "You need to wait a bit longer before you can claim from {0} again.",
+  "guildweekly_notready_timeleft_title": "Time Until Next Claim",
   "guildweekly_error_low_level": "You need to have a higher level than your rival!",
   "guildweekly_error_no_rival": "You have no rival yet. Server admins: use `>guildnewrival` to start matchmaking!",
-  "guildweekly_error_timer_running": "You've already used your weekly, available again in {0}!",
   "miki_terms_config": "Config",
   "miki_terms_experience": "Experience",
   "miki_terms_level": "Level",
   "miki_terms_rank": "Rank",
   "miki_terms_rival": "Rival",
+  "miki_terms_weekly": "Weekly",
   "blackjack_draw_description": "You get your bet back! woop woop!",
   "blackjack_draw_title": "It's a draw!",
   "blackjack_error_instance_exists": "You're already playing blackjack in this channel!",
@@ -648,6 +658,8 @@
   "guildhouse_buy": "For your next upgrade. Your guild needs to pay {0} mekos! use `>guildupgrade house` to purchase it.",
   "error_user_null": "User not found!",
   "error_bank_account_null": "User hasn't deposited to the guild bank yet!",
+  "error_local_experience_null": "There was a problem fetching your local experience!",
+  "error_timer_null": "There was a problem with the timing on your daily, please report this in the support server!",
   "error_notifications_setting_not_found": "The setting has not been found in Miki's configurable notifications! The valid options are: {0}",
   "error_notifications_type_not_found": "There is no setting called {0} in {1} present. Please pick from these options: {2}",
   "notifications_update_success": "Notification setting updated successfully!",
@@ -720,5 +732,5 @@
   "miki_command_description_reddit": "Show reddit posts per subreddit",
   "miki_command_usage_reddit": ">reddit <subreddit> [list]",
   "noun_subreddit": "subreddit",
-  "action_view_reddit": "view on reddit" 
+  "action_view_reddit": "view on reddit"
 }
